# dupkiller

./: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  README.md  README.ru.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
dupkiller/: __init__.py  __main__.py  cache.py  checkpoint.py  cli.py  dedupe.py  disk.py  grouping.py  hashing.py  pipeline.py  scanner.py  utils.py  workers.py
tests/: test_cache.py  test_checkpoint.py  test_cli.py  test_dedupe.py  test_disk.py  test_grouping.py  test_hashing.py  test_integration.py  test_pipeline.py  test_scanner.py  test_utils.py  test_workers.py
