[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dupkiller"
dynamic = ["version"]
description = "High-performance duplicate file finder with multi-core hashing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "deadboizxc" }]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
dupkiller = "dupkiller.cli:main"

[tool.setuptools.dynamic]
version = {attr = "dupkiller.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dupkiller*"]

[tool.setuptools.package-data]
dupkiller = ["py.typed"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q -p no:asyncio"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["dupkiller"]
omit   = ["tests/*", "dupkiller/__main__.py"]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "UP007",  # X | Y union syntax — keep Optional for clarity
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true
warn_return_any       = true
warn_unused_ignores   = true
warn_redundant_casts  = true
no_implicit_optional  = true
